@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.49 2003/08/08 21:37:59 petdance Exp $
+# $Id: Changes,v 1.50 2003/08/12 05:26:03 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.58
@@ -10,6 +10,8 @@ Revision history for Perl extension WWW::Mechanize
 	* Determination of live vs. local tests is now done in
 	  Makefile.PL, and we don't have to set those silly semaphore
 	  files any more.
+	* Made other cleanups in Makefile.PL, like using
+	  ExtUtils::Command instead of rolling my own touch().
 	* Moved all the *-live.t tests into t/live/*.t, and renamed
 	  the *-local.t files to not be -local.
 	* Added more tests for <AREA> tags.
